--- a/source/index.html
+++ b/source/index.html
@@ -31,8 +31,36 @@
     <div class="favourites__count"><span>15</span></div>
   </div>
   <div class="header__additional additional">
-    <span class="additional__title">Подлинный премиум-класс</span>
+    <h2 class="additional__title">Подлинный премиум-класс</h2>
     <button class="additional__button"></button>
   </div>
 </header>
+<main class="main">
+  <section class="gallery">
+    <h2 class="gallery__description">«Сколково парк» — это жилой комплекс 
+      премиум-класса в престижном пригороде 
+      мирового уровня</h2>
+      <ul class="gallery-list">
+        <li class="gallery-list__item"><img src="img/gallery1.jpg" alt="Галлерея" width="48" height="27"></li>
+        <li class="gallery-list__item gallery-list__item--active"><img src="img/gallery2.jpg" alt="Галлерея" width="48" height="27"></li>
+        <li class="gallery-list__item"><img src="img/gallery3.jpg" alt="Галлерея" width="48" height="27"></li>
+        <li class="gallery-list__item"><img src="img/gallery4.jpg" alt="Галлерея" width="48" height="27"></li>
+        <li class="gallery-list__item"><img src="img/gallery5.jpg" alt="Галлерея" width="48" height="27"></li>
+        <li class="gallery-list__item"><img src="img/gallery6.jpg" alt="Галлерея" width="48" height="27"></li>
+      </ul>
+  </section>
+  <section class="abouts">
+    <ul class="abouts-list">
+      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about1.jpg" alt="Пункт меню" class="about__image" width="171" height="114"><h3 class="about__name">Фотогалерея</h3></a></li>
+      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about2.jpg" alt="Пункт меню" class="about__image" width="171" height="114"><h3 class="about__name">Видео о проекте</h3></a></li>
+      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about3.jpg" alt="Пункты меню" class="about__image" width="171" height="114"><h3 class="about__name">Ход строительства</h3></a></li>
+    </ul>
+  </section>
+  <section class="news">
+    <img src="img/news1.jpg" alt="Новость" class="news__image" width="140" height="79">
+    <span class="news__date">2 марта 2015</span>
+    <h3 class="news__title"><a href="#">Повышение цен на 3-х комнатные квартиры</a></h3>
+    <a class="news__link" href="#">Все новости</a>
+  </section>
+</main>
 </body>
