--- a/source/index.html
+++ b/source/index.html
@@ -12,34 +12,68 @@
 </head>
 
 <body>
-<header class="header">
-  <nav class="navigation">
-    <ul class="nav-list">
-      <li class="nav-list__item"><a href="#" class="navigation__link">О проекте</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Расположение</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Окружение</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Территория</a></li>
-      <li class="nav-list__item logo"><a class="navigation__link"><img src="img/logo.png" alt="Сколково Парк" class="logo__image" width="108" height="64"></a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Выбрать квартиру</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Качество</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Новости</a></li>
-      <li class="nav-list__item"><a href="#" class="navigation__link">Контакты</a></li>
-    </ul>
-  </nav>
-  <div class="favourites">
-    <button class="favourites__button">Избранное</button>
-    <div class="favourites__count"><span>15</span></div>
-  </div>
-  <div class="header__additional additional">
-    <h2 class="additional__title">Подлинный премиум-класс</h2>
-    <button class="additional__button"></button>
-  </div>
-</header>
-<main class="main">
-  <section class="gallery">
-    <h2 class="gallery__description">«Сколково парк» — это жилой комплекс 
-      премиум-класса в престижном пригороде 
-      мирового уровня</h2>
+  <svg style="display:none">
+    <symbol viewBox="0 0 468.792 468.792" id="inst">
+      <path d="M234.396,0C104.946,0,0,104.946,0,234.396s104.946,234.396,234.396,234.396
+        s234.396-104.946,234.396-234.396C468.792,104.914,363.846,0,234.396,0z M380.881,370.329c0,5.816-4.736,10.552-10.615,10.552
+        H98.462c-5.816,0-10.584-4.704-10.584-10.552V98.462c0-5.816,4.736-10.584,10.584-10.584h271.804
+        c5.848,0,10.615,4.736,10.615,10.584C380.881,98.462,380.881,370.329,380.881,370.329z M175.789,234.396
+        c0-32.355,26.252-58.607,58.607-58.607s58.607,26.252,58.607,58.607s-26.252,58.607-58.607,58.607
+        S175.789,266.75,175.789,234.396z M293.003,117.182h58.607v58.607h-58.607V117.182z M319.636,219.744h31.973v131.834H117.214
+        V219.744h32.005c-1.24,5.88-1.971,8.422-1.971,14.652c0,48.119,39.124,87.179,87.179,87.179
+        c48.119,0,87.179-39.061,87.179-87.179C321.575,228.166,320.876,225.624,319.636,219.744z" />
+    </symbol>
+    <symbol viewBox="0 0 49.652 49.652" id="fb">
+      <path d="M24.826,0C11.137,0,0,11.137,0,24.826c0,13.688,11.137,24.826,24.826,24.826c13.688,0,24.826-11.138,24.826-24.826
+  			C49.652,11.137,38.516,0,24.826,0z M31,25.7h-4.039c0,6.453,0,14.396,0,14.396h-5.985c0,0,0-7.866,0-14.396h-2.845v-5.088h2.845
+  			v-3.291c0-2.357,1.12-6.04,6.04-6.04l4.435,0.017v4.939c0,0-2.695,0-3.219,0c-0.524,0-1.269,0.262-1.269,1.386v2.99h4.56L31,25.7z
+  			" />
+    </symbol>
+    <symbol viewBox="0 0 97.75 97.75" id="vk">
+      <path d="M48.875,0C21.883,0,0,21.882,0,48.875S21.883,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.867,0,48.875,0z
+    		 M73.667,54.161c2.278,2.225,4.688,4.319,6.733,6.774c0.906,1.086,1.76,2.209,2.41,3.472c0.928,1.801,0.09,3.776-1.522,3.883
+    		l-10.013-0.002c-2.586,0.214-4.644-0.829-6.379-2.597c-1.385-1.409-2.67-2.914-4.004-4.371c-0.545-0.598-1.119-1.161-1.803-1.604
+    		c-1.365-0.888-2.551-0.616-3.333,0.81c-0.797,1.451-0.979,3.059-1.055,4.674c-0.109,2.361-0.821,2.978-3.19,3.089
+    		c-5.062,0.237-9.865-0.531-14.329-3.083c-3.938-2.251-6.986-5.428-9.642-9.025c-5.172-7.012-9.133-14.708-12.692-22.625
+    		c-0.801-1.783-0.215-2.737,1.752-2.774c3.268-0.063,6.536-0.055,9.804-0.003c1.33,0.021,2.21,0.782,2.721,2.037
+    		c1.766,4.345,3.931,8.479,6.644,12.313c0.723,1.021,1.461,2.039,2.512,2.76c1.16,0.796,2.044,0.533,2.591-0.762
+    		c0.35-0.823,0.501-1.703,0.577-2.585c0.26-3.021,0.291-6.041-0.159-9.05c-0.28-1.883-1.339-3.099-3.216-3.455
+    		c-0.956-0.181-0.816-0.535-0.351-1.081c0.807-0.944,1.563-1.528,3.074-1.528l11.313-0.002c1.783,0.35,2.183,1.15,2.425,2.946
+    		l0.01,12.572c-0.021,0.695,0.349,2.755,1.597,3.21c1,0.33,1.66-0.472,2.258-1.105c2.713-2.879,4.646-6.277,6.377-9.794
+    		c0.764-1.551,1.423-3.156,2.063-4.764c0.476-1.189,1.216-1.774,2.558-1.754l10.894,0.013c0.321,0,0.647,0.003,0.965,0.058
+    		c1.836,0.314,2.339,1.104,1.771,2.895c-0.894,2.814-2.631,5.158-4.329,7.508c-1.82,2.516-3.761,4.944-5.563,7.471
+    		C71.48,50.992,71.611,52.155,73.667,54.161z" />
+    </symbol>
+
+  </svg>
+  <header class="header">
+    <nav class="navigation">
+      <ul class="nav-list">
+        <li class="nav-list__item"><a href="#" class="navigation__link">О проекте</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Расположение</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Окружение</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Территория</a></li>
+        <li class="nav-list__item logo"><a class="navigation__link"><img src="img/logo.png" alt="Сколково Парк" class="logo__image" width="108" height="64"></a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Выбрать квартиру</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Качество</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Новости</a></li>
+        <li class="nav-list__item"><a href="#" class="navigation__link">Контакты</a></li>
+      </ul>
+    </nav>
+    <div class="favourites">
+      <button class="favourites__button">Избранное</button>
+      <div class="favourites__count"><span>15</span></div>
+    </div>
+    <div class="header__additional additional">
+      <h2 class="additional__title">Подлинный премиум-класс</h2>
+      <button class="additional__button"></button>
+    </div>
+  </header>
+  <main class="main">
+    <section class="gallery">
+      <h2 class="gallery__description">«Сколково парк» — это жилой комплекс
+        премиум-класса в престижном пригороде
+        мирового уровня</h2>
       <ul class="gallery-list">
         <li class="gallery-list__item"><img src="img/gallery1.jpg" alt="Галлерея" width="48" height="27"></li>
         <li class="gallery-list__item gallery-list__item--active"><img src="img/gallery2.jpg" alt="Галлерея" width="48" height="27"></li>
@@ -48,19 +82,59 @@
         <li class="gallery-list__item"><img src="img/gallery5.jpg" alt="Галлерея" width="48" height="27"></li>
         <li class="gallery-list__item"><img src="img/gallery6.jpg" alt="Галлерея" width="48" height="27"></li>
       </ul>
-  </section>
-  <section class="abouts">
-    <ul class="abouts-list">
-      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about1.jpg" alt="Пункт меню" class="about__image" width="171" height="114"><h3 class="about__name">Фотогалерея</h3></a></li>
-      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about2.jpg" alt="Пункт меню" class="about__image" width="171" height="114"><h3 class="about__name">Видео о проекте</h3></a></li>
-      <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about3.jpg" alt="Пункты меню" class="about__image" width="171" height="114"><h3 class="about__name">Ход строительства</h3></a></li>
+    </section>
+    <section class="abouts">
+      <ul class="abouts-list">
+        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about1.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
+            <h3 class="about__name">Фотогалерея</h3>
+          </a></li>
+        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about2.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
+            <h3 class="about__name">Видео о проекте</h3>
+          </a></li>
+        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about3.jpg" alt="Пункты меню" class="about__image" width="171" height="114">
+            <h3 class="about__name">Ход строительства</h3>
+          </a></li>
+      </ul>
+    </section>
+    <section class="news">
+      <img src="img/news1.jpg" alt="Новость" class="news__image" width="140" height="79">
+      <span class="news__date">2 марта 2015</span>
+      <h3 class="news__title"><a href="#">Повышение цен на 3-х комнатные квартиры</a></h3>
+      <a class="news__link" href="#">Все новости</a>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="contacts">
+      <a href="tel:+74957775554" class="contacts__phone">+7 (495) 777 555 4</a>
+      <a  href="#" class="contacts__call-me">Заказать звонок</a>
+      <ul class="social-list">
+        <li class="social-list__item social">
+          <a class="social__link" href="#">
+            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+              <use xlink:href="#fb" />
+            </svg>
+          </a>
+        </li>
+        <li class="social-list__item social">
+          <a class="social__link" href="#">
+            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+              <use xlink:href="#vk" />
+            </svg>
+          </a>
+        </li>
+        <li class="social-list__item social">
+          <a class="social__link" href="#">
+            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+              <use xlink:href="#inst" />
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <ul class="others-list">
+      <li class="others-list__item other">© Сколково Парк</li>
+      <li class="others-list__item other"><a href="#" class="other__link">Проектная декларация</a></li>
+      <li class="others-list__item other"><a href="#" class="other__link">Скачать брошюру</a></li>
     </ul>
-  </section>
-  <section class="news">
-    <img src="img/news1.jpg" alt="Новость" class="news__image" width="140" height="79">
-    <span class="news__date">2 марта 2015</span>
-    <h3 class="news__title"><a href="#">Повышение цен на 3-х комнатные квартиры</a></h3>
-    <a class="news__link" href="#">Все новости</a>
-  </section>
-</main>
+  </footer>
 </body>
