flex-end positioning

--- a/source/index.html
+++ b/source/index.html
@@ -46,95 +46,97 @@
     </symbol>
 
   </svg>
-  <header class="header">
-    <nav class="navigation">
-      <ul class="nav-list">
-        <li class="nav-list__item"><a href="#" class="navigation__link">О проекте</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Расположение</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Окружение</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Территория</a></li>
-        <li class="nav-list__item logo"><a class="navigation__link"><img src="img/logo.png" alt="Сколково Парк" class="logo__image" width="108" height="64"></a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Выбрать квартиру</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Качество</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Новости</a></li>
-        <li class="nav-list__item"><a href="#" class="navigation__link">Контакты</a></li>
+    <header class="header">
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li class="nav-list__item"><a href="#" class="navigation__link">О проекте</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Расположение</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Окружение</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Территория</a></li>
+          <li class="nav-list__item logo"><a class="navigation__link"><img src="img/logo.png" alt="Сколково Парк" class="logo__image" width="108" height="64"></a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Выбрать квартиру</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Качество</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Новости</a></li>
+          <li class="nav-list__item"><a href="#" class="navigation__link">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="favourites">
+        <button class="favourites__button">Избранное</button>
+        <div class="favourites__count"><span>15</span></div>
+      </div>
+      <div class="header__additional additional">
+        <h2 class="additional__title">Подлинный премиум-класс</h2>
+        <button class="additional__button"></button>
+      </div>
+    </header>
+      <div class="container">
+    <main class="main">
+      <section class="gallery">
+        <h2 class="gallery__description">«Сколково парк» — это жилой комплекс
+          премиум-класса в престижном пригороде
+          мирового уровня</h2>
+        <ul class="gallery-list">
+          <li class="gallery-list__item"><img src="img/gallery1.jpg" alt="Галлерея" width="48" height="27"></li>
+          <li class="gallery-list__item gallery-list__item--active"><img src="img/gallery2.jpg" alt="Галлерея" width="48" height="27"></li>
+          <li class="gallery-list__item"><img src="img/gallery3.jpg" alt="Галлерея" width="48" height="27"></li>
+          <li class="gallery-list__item"><img src="img/gallery4.jpg" alt="Галлерея" width="48" height="27"></li>
+          <li class="gallery-list__item"><img src="img/gallery5.jpg" alt="Галлерея" width="48" height="27"></li>
+          <li class="gallery-list__item"><img src="img/gallery6.jpg" alt="Галлерея" width="48" height="27"></li>
+        </ul>
+      </section>
+      <section class="abouts">
+        <ul class="abouts-list">
+          <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about1.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
+              <h3 class="about__name">Фотогалерея</h3>
+            </a></li>
+          <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about2.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
+              <h3 class="about__name">Видео о проекте</h3>
+            </a></li>
+          <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about3.jpg" alt="Пункты меню" class="about__image" width="171" height="114">
+              <h3 class="about__name">Ход строительства</h3>
+            </a></li>
+        </ul>
+      </section>
+      <section class="news">
+        <img src="img/news1.jpg" alt="Новость" class="news__image" width="140" height="79">
+        <span class="news__date">2 марта 2015</span>
+        <h3 class="news__title"><a href="#">Повышение цен на 3-х комнатные квартиры</a></h3>
+        <a class="news__link" href="#">Все новости</a>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="contacts">
+        <a href="tel:+74957775554" class="contacts__phone">+7 (495) 777 555 4</a>
+        <a href="#" class="contacts__call-me">Заказать звонок</a>
+        <ul class="social-list">
+          <li class="social-list__item social">
+            <a class="social__link" href="#">
+              <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+                <use xlink:href="#fb" />
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item social">
+            <a class="social__link" href="#">
+              <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+                <use xlink:href="#vk" />
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item social">
+            <a class="social__link" href="#">
+              <svg class="social__image" width="28" height="28" fill="#8d8d8d">
+                <use xlink:href="#inst" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <ul class="others-list">
+        <li class="others-list__item other">© Сколково Парк</li>
+        <li class="others-list__item other"><a href="#" class="other__link">Проектная декларация</a></li>
+        <li class="others-list__item other"><a href="#" class="other__link">Скачать брошюру</a></li>
       </ul>
-    </nav>
-    <div class="favourites">
-      <button class="favourites__button">Избранное</button>
-      <div class="favourites__count"><span>15</span></div>
-    </div>
-    <div class="header__additional additional">
-      <h2 class="additional__title">Подлинный премиум-класс</h2>
-      <button class="additional__button"></button>
-    </div>
-  </header>
-  <main class="main">
-    <section class="gallery">
-      <h2 class="gallery__description">«Сколково парк» — это жилой комплекс
-        премиум-класса в престижном пригороде
-        мирового уровня</h2>
-      <ul class="gallery-list">
-        <li class="gallery-list__item"><img src="img/gallery1.jpg" alt="Галлерея" width="48" height="27"></li>
-        <li class="gallery-list__item gallery-list__item--active"><img src="img/gallery2.jpg" alt="Галлерея" width="48" height="27"></li>
-        <li class="gallery-list__item"><img src="img/gallery3.jpg" alt="Галлерея" width="48" height="27"></li>
-        <li class="gallery-list__item"><img src="img/gallery4.jpg" alt="Галлерея" width="48" height="27"></li>
-        <li class="gallery-list__item"><img src="img/gallery5.jpg" alt="Галлерея" width="48" height="27"></li>
-        <li class="gallery-list__item"><img src="img/gallery6.jpg" alt="Галлерея" width="48" height="27"></li>
-      </ul>
-    </section>
-    <section class="abouts">
-      <ul class="abouts-list">
-        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about1.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
-            <h3 class="about__name">Фотогалерея</h3>
-          </a></li>
-        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about2.jpg" alt="Пункт меню" class="about__image" width="171" height="114">
-            <h3 class="about__name">Видео о проекте</h3>
-          </a></li>
-        <li class="abouts-list__item about"><a class="about__link" href="#"><img src="img/about3.jpg" alt="Пункты меню" class="about__image" width="171" height="114">
-            <h3 class="about__name">Ход строительства</h3>
-          </a></li>
-      </ul>
-    </section>
-    <section class="news">
-      <img src="img/news1.jpg" alt="Новость" class="news__image" width="140" height="79">
-      <span class="news__date">2 марта 2015</span>
-      <h3 class="news__title"><a href="#">Повышение цен на 3-х комнатные квартиры</a></h3>
-      <a class="news__link" href="#">Все новости</a>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="contacts">
-      <a href="tel:+74957775554" class="contacts__phone">+7 (495) 777 555 4</a>
-      <a  href="#" class="contacts__call-me">Заказать звонок</a>
-      <ul class="social-list">
-        <li class="social-list__item social">
-          <a class="social__link" href="#">
-            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
-              <use xlink:href="#fb" />
-            </svg>
-          </a>
-        </li>
-        <li class="social-list__item social">
-          <a class="social__link" href="#">
-            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
-              <use xlink:href="#vk" />
-            </svg>
-          </a>
-        </li>
-        <li class="social-list__item social">
-          <a class="social__link" href="#">
-            <svg class="social__image" width="28" height="28" fill="#8d8d8d">
-              <use xlink:href="#inst" />
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <ul class="others-list">
-      <li class="others-list__item other">© Сколково Парк</li>
-      <li class="others-list__item other"><a href="#" class="other__link">Проектная декларация</a></li>
-      <li class="others-list__item other"><a href="#" class="other__link">Скачать брошюру</a></li>
-    </ul>
-  </footer>
+    </footer>
+  </div>
 </body>
