--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,7 @@
 <body>
   <svg style="display:none">
     <symbol viewBox="0 0 468.792 468.792" id="inst">
+      <circle cx="230" cy="250" r="210" fill="white"/>
       <path d="M234.396,0C104.946,0,0,104.946,0,234.396s104.946,234.396,234.396,234.396
         s234.396-104.946,234.396-234.396C468.792,104.914,363.846,0,234.396,0z M380.881,370.329c0,5.816-4.736,10.552-10.615,10.552
         H98.462c-5.816,0-10.584-4.704-10.584-10.552V98.462c0-5.816,4.736-10.584,10.584-10.584h271.804
@@ -24,12 +25,14 @@
         c48.119,0,87.179-39.061,87.179-87.179C321.575,228.166,320.876,225.624,319.636,219.744z" />
     </symbol>
     <symbol viewBox="0 0 49.652 49.652" id="fb">
+      <circle cx="22" cy="22" r="20" fill="white"/>
       <path d="M24.826,0C11.137,0,0,11.137,0,24.826c0,13.688,11.137,24.826,24.826,24.826c13.688,0,24.826-11.138,24.826-24.826
   			C49.652,11.137,38.516,0,24.826,0z M31,25.7h-4.039c0,6.453,0,14.396,0,14.396h-5.985c0,0,0-7.866,0-14.396h-2.845v-5.088h2.845
   			v-3.291c0-2.357,1.12-6.04,6.04-6.04l4.435,0.017v4.939c0,0-2.695,0-3.219,0c-0.524,0-1.269,0.262-1.269,1.386v2.99h4.56L31,25.7z
   			" />
     </symbol>
     <symbol viewBox="0 0 97.75 97.75" id="vk">
+      <circle cx="48" cy="50" r="40" fill="white"/>
       <path d="M48.875,0C21.883,0,0,21.882,0,48.875S21.883,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.867,0,48.875,0z
     		 M73.667,54.161c2.278,2.225,4.688,4.319,6.733,6.774c0.906,1.086,1.76,2.209,2.41,3.472c0.928,1.801,0.09,3.776-1.522,3.883
     		l-10.013-0.002c-2.586,0.214-4.644-0.829-6.379-2.597c-1.385-1.409-2.67-2.914-4.004-4.371c-0.545-0.598-1.119-1.161-1.803-1.604
@@ -88,12 +91,12 @@
             премиум-класса в престижном пригороде
             мирового уровня</h2>
           <ul class="gallery-list">
-            <li class="gallery-list__item"><img src="img/gallery1.jpg" alt="Галлерея" width="48" height="27"></li>
-            <li class="gallery-list__item gallery-list__item--active"><img src="img/gallery2.jpg" alt="Галлерея" width="48" height="27"></li>
-            <li class="gallery-list__item"><img src="img/gallery3.jpg" alt="Галлерея" width="48" height="27"></li>
-            <li class="gallery-list__item"><img src="img/gallery4.jpg" alt="Галлерея" width="48" height="27"></li>
-            <li class="gallery-list__item"><img src="img/gallery5.jpg" alt="Галлерея" width="48" height="27"></li>
-            <li class="gallery-list__item"><img src="img/gallery6.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item"><img src="img/bg1.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item gallery-list__item--active"><img src="img/bg2.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item"><img src="img/bg3.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item"><img src="img/bg4.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item"><img src="img/bg5.jpg" alt="Галлерея" width="48" height="27"></li>
+            <li class="gallery-list__item"><img src="img/bg6.jpg" alt="Галлерея" width="48" height="27"></li>
           </ul>
         </section>
         <section class="abouts">
@@ -167,5 +170,6 @@
       </footer>
     </div>
   </div>
-  <script src="js/popup.js"></script>
+  <script src="js/popup.js" async></script>
+  <script src="js/bg.js" async></script>
 </body>
